[fix]: Verification
